env/test/infra/finagent-gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: finagent-gateway-test
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
spec:
  project: default
  source:
    repoURL: https://github.com/nexaflow-org/nexaflow-helm.git
    targetRevision: main
    path: infra/finagent-gateway
    helm:
      valueFiles:
        - values.yaml
        - values-test.yaml
  destination:
    server: https://kubernetes.default.svc
    namespace: finagent-gateway-ns
  syncPolicy:
    automated:
      prune: true
      selfHeal: true
    syncOptions:
      - CreateNamespace=false
