env/test/infra/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
  labels:
    app.kubernetes.io/part-of: finagent
    app.kubernetes.io/component: keycloak
    shared-gateway: "true"
spec:
  parentRefs:
    - name: finagent-gateway
      namespace: finagent-gateway-ns
  hostnames:
    - "keycloak.nexaflow.site"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 8080
